syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.utility";
option java_outer_classname = "UtilityServiceImpl";

package Utility;

service UtilityService {
	// Simple RPC
	rpc switchDevices (DevicesRequest) returns (DevicesResponse) {};

	// Simple RPC
	rpc switchCameraOn (CameraRequest) returns (CameraResponse) {};
	
	// Bidirectional Streaming
	rpc printList(stream PrinterRequest) returns (stream PrinterResponse) {};
}

message DevicesRequest {
	bool devices = 1;
}

message DevicesResponse {
	bool devices = 1;
}

message CameraRequest {
	bool camera = 1;
}

message CameraResponse {
	bool camera = 1;
}

message PrinterRequest {
    string pList = 1;
}

message PrinterResponse {
    string pList = 1;
}